# nix-lang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  nix-lang.cabal  q.nix
.github/workflows/: nix.yaml
app/: BenchCabal2nix.hs
nix-lang-qq/: LICENSE  nix-lang-qq.cabal
nix-lang-qq/src/Nix/Lang/: QQ.hs
nix-lang-qq/test/: Spec.hs
src/Nix/Lang/: Annotation.hs  Edit.hs  ExactPrint.hs  Outputable.hs  Parser.hs  Pretty.hs  QQ.hs  RFCPrint.hs  Span.hs  Types.hs  Utils.hs  Zipper.hs
src/Nix/Lang/Edit/Internal/: TH.hs
src/Nix/Lang/ExactPrint/: Edit.hs  Finalize.hs  Operations.hs  Prepare.hs  Reflow.hs  Repair.hs
src/Nix/Lang/ExactPrint/Edit/: Fragment.hs  Geometry.hs  Rebuild.hs  Types.hs
src/Nix/Lang/ExactPrint/Internal/: Fragment.hs  Geometry.hs  Parse.hs  Rebuild.hs  Reflow.hs  Repair.hs  Types.hs  Utils.hs
src/Nix/Lang/ExactPrint/Prepare/: Parse.hs  Rebuild.hs  Reflow.hs  Repair.hs  Types.hs  Utils.hs
src/Nix/Lang/Lexer/: Text.hs
src/Nix/Lang/QQ/: Parsed.hs
src/Nix/Lang/RFCPrint/: LayoutHints.hs
src/Nix/Lang/Types/: Base.hs  Parsed.hs  Ps.hs  Rename.hs  Syn.hs
src/Nix/Lang/Zipper/: Edit.hs  ExactPrint.hs
test/: Edit.hs  ExactPrint.hs  Parser.hs  RFCPrint.hs  Spec.hs  Utils.hs  sample.nix
test/fixtures/nixfmt/correct/: blank-line-in-interpolation.nix
test/fixtures/nixfmt/diff/comment/: in.nix
test/fixtures/nixfmt/diff/leading_blank/: in.nix
