cabal-version:   3.0
name:            nix-lang
version:         0.0.0
synopsis:        A toy parser for Nix language
description:     See README for details.
category:        Nix
license:         BSD-3-Clause
license-file:    LICENSE
author:          berberman
maintainer:      berberman <berberman@yandex.com>
copyright:       Copyright (c) berberman 2022-2026
stability:       alpha
homepage:        https://github.com/berberman/nix-lang
bug-reports:     https://github.com/berberman/nix-lang/issues
extra-doc-files:
  CHANGELOG.md
  README.md
  test/sample.nix

common common-attrs
  build-depends:      base >=4.10 && <5
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    KindSignatures
    LambdaCase
    NoStarIsType
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-attrs
  build-depends:
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , syb
    , template-haskell
    , text

  exposed-modules:
    Nix.Lang.Annotation
    Nix.Lang.Edit
    Nix.Lang.Edit.Internal.TH
    Nix.Lang.ExactPrint
    Nix.Lang.ExactPrint.Operations
    Nix.Lang.ExactPrint.Prepare.Parse
    Nix.Lang.ExactPrint.Prepare.Rebuild
    Nix.Lang.ExactPrint.Prepare.Reflow
    Nix.Lang.ExactPrint.Prepare.Repair
    Nix.Lang.ExactPrint.Prepare.Types
    Nix.Lang.ExactPrint.Prepare.Utils
    Nix.Lang.Lexer.Text
    Nix.Lang.Outputable
    Nix.Lang.Parser
    Nix.Lang.QQ
    Nix.Lang.RFCPrint
    Nix.Lang.RFCPrint.LayoutHints
    Nix.Lang.Span
    Nix.Lang.Types
    Nix.Lang.Types.Ps
    Nix.Lang.Types.Syn
    Nix.Lang.Utils

  hs-source-dirs:  src

test-suite nix-lang-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:
    , megaparsec
    , nix-lang
    , process
    , syb
    , tasty
    , tasty-hunit
    , text

  other-modules:
    ExactPrint
    Parser
    RFCPrint
    Utils

  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/berberman/nix-lang
